fix: input chat bar overflow shrinks members panel

--- a/system24-port.theme.css
+++ b/system24-port.theme.css
@@ -213,8 +213,6 @@ body {
   .privateChannels__35e86,
   .container_c8ffbb {
     overflow: visible !important;
-    min-height: 0;
-    min-width: 0
   }
   .container__2637a::after {
     content: "server";
